fixes plus podcasts

--- a/en/_posts/2025-03-31-2024.md
+++ b/en/_posts/2025-03-31-2024.md
@@ -23,7 +23,7 @@ The steady growth was there over the first four months of the year and all the p
 
 Why this all happened? Many contributing factors collided. The **Nozbe Classic** user base kept shrinking. While the new Nozbe kept growing, it wasn't fast enough. There's much more competition on the market and the competitors are well-funded so they have lots of marking dollars to burn. It's just really really hard to keep attracting new customers. It's virtually impossible to go viral or even get recommendations.
 
-Yet, whenever I talked to [my customers](https://1nozbe.com/users/?c=michaelteam), they'd tell me how much they loved our app and how it made them more productive. However, it's not enough to have a great product these days. And you just have too keep your costs to minimum. You have to be lean as hell to survive. So I had to shrink the team… But:
+Yet, whenever I talked to [my customers](https://nozbe.com/users/?c=michaelteam), they'd tell me how much they loved our app and how it made them more productive. However, it's not enough to have a great product these days. And you just have too keep your costs to minimum. You have to be lean as hell to survive. So I had to shrink the team… But:
 
 > How do you let people go when you really like and value them and have been working with them for the last many years? And **who** do you let go?
 
@@ -55,7 +55,7 @@ Before I had video calls with the 3 downsized team members I recorded a video [v
 
 ## Regrouping - Nozbe reunion and rest of the year…
 
-After all that I took some much-needed vacation time in August to try to finally get some sleep and rest emotionally. And let people digest the situation and get accustomed to our smaller team of 15. I made sure we still were on for our annual [Nozbe reunion](/reunion) in [early October in Warsaw](https://1nozbe.com/blog/2024-nozbe-retreat-warsaw-remote/?c=michaelteam) so we could hang out together and regroup.
+After all that I took some much-needed vacation time in August to try to finally get some sleep and rest emotionally. And let people digest the situation and get accustomed to our smaller team of 15. I made sure we still were on for our annual [Nozbe reunion](/reunion) in [early October in Warsaw](https://nozbe.com/blog/2024-nozbe-retreat-warsaw-remote/?c=michaelteam) so we could hang out together and regroup.
 
 ![{{ page.title }} nozbe](/img/2024-nozbe.jpg)
 
@@ -65,7 +65,7 @@ And while the team was in shock and confused at the beginning, over the next mon
 
 Additionally, as the sales picked up and we lowered our costs, we could start re-investing in the team again. At our reunion I realized that some of our team members had really outdated hardware because we were scrapping by. Slowly but surely we started ordering stuff. We even managed to raise everyone's salaries for 2025. **We bounced back.**
 
-However, two people still decided to leave in the meantime, that's why we are hiring now to cover these roles in [programming](https://1nozbe.com/pl/blog/nozbe-zatrudni-front-end-developera/?c=michaelteam) and [customer support](https://2nozbe.com/blog/2025-nozbe-is-hiring-customer-support-specialist/?c=michaelteam). Apply if you think you're a match.
+However, two people still decided to leave in the meantime, that's why we are hiring now to cover these roles in [programming](https://nozbe.com/pl/blog/nozbe-zatrudni-front-end-developera/?c=michaelteam) and [customer support](https://nozbe.com/blog/2025-nozbe-is-hiring-customer-support-specialist/?c=michaelteam). Apply if you think you're a match.
 
 Anyway, 2024 is over and now things are looking up and I promised myself that I'd make everything in my power to never have to go through something like this ever again.
 
@@ -75,11 +75,11 @@ That's the plan for 2025 and beyond. Wish me luck!
 
 ## Nozbe as product got upgraded significantly!
 
-Overall it wasn't a bad year for Nozbe as a product. We introduced [Messages in Nozbe](https://1nozbe.com/blog/messages-in-nozbe-all-your-teams-communication-in-one-app/?c=michaelteam) where you can chat with individual team members. Soon we're shipping team-wide messages as well. This makes [Nozbe][n] a perfect app to run a company - you have all the organization (projects and tasks) and all the communication (comments and messages) in one app. On every device!
+Overall it wasn't a bad year for Nozbe as a product. We introduced [Messages in Nozbe](https://nozbe.com/blog/messages-in-nozbe-all-your-teams-communication-in-one-app/?c=michaelteam) where you can chat with individual team members. Soon we're shipping team-wide messages as well. This makes [Nozbe][n] a perfect app to run a company - you have all the organization (projects and tasks) and all the communication (comments and messages) in one app. On every device!
 
 {% include video.html id="QgCxrw_vR7U" %}
 
-The old "Nozbe Personal" has been renamed to [**Nozbe Classic**](https://1nozbe.com/blog/2024-personal-to-classic/?c=michaelteam) and now we're migrating many more users to the new Nozbe. If you still like Nozbe Classic, we welcome you to try out new Nozbe, but if you're not ready to switch, no problem, the Classic is here to stay for you.
+The old "Nozbe Personal" has been renamed to [**Nozbe Classic**](https://nozbe.com/blog/2024-personal-to-classic/?c=michaelteam) and now we're migrating many more users to the new Nozbe. If you still like Nozbe Classic, we welcome you to try out new Nozbe, but if you're not ready to switch, no problem, the Classic is here to stay for you.
 
 Some additional stats:
 
@@ -87,7 +87,7 @@ Some additional stats:
 - Our MRR (Monthly Recurring Revenue) from new Nozbe **grew by 60%** (plan was to double it, but we didn't manage - maybe this year?)
 - **Paid seats** in new Nozbe almost doubled. This means that not only single users are using Nozbe, but there are many more teams and businesses using it, with an average of **4 seats per team.**
 
-The growth is there, but we are hungry for more and I hope this year will be our breakthrough year and would put Nozbe on a path to predictable growth. There are so many [small teams and businesses](https://1nozbe.com/business?c=michaelteam) that should use Nozbe to get everything organized!
+The growth is there, but we are hungry for more and I hope this year will be our breakthrough year and would put Nozbe on a path to predictable growth. There are so many [small teams and businesses](https://nozbe.com/business?c=michaelteam) that should use Nozbe to get everything organized!
 
 ## Back to regular podcasting
 
