--- a/en/_posts/2025-03-31-2024.md
+++ b/en/_posts/2025-03-31-2024.md
@@ -149,7 +149,7 @@ My dream came true as I could see my favorite Spanish-singing rock band, [Maná]
 
 ![{{ page.title }} concert](/img/2024-concert.jpg)
 
-My youngest daughter insisted on going to see [Ed Sheeran](https://en.wikipedia.org/wiki/Ed_Sheeran) concert and it was amazing. He's really a one-man-orchestra! And my eldest daughter insisted on seeing Placebo at a festival in Łódź. So cool. Their *Japanese is better* if you know what I mean.
+My youngest daughter insisted on going to see [Ed Sheeran](https://en.wikipedia.org/wiki/Ed_Sheeran) concert and it was amazing. He's really a one-man-orchestra! And my eldest daughter insisted on seeing [Placebo](https://en.wikipedia.org/wiki/Placebo_(band)) at a festival in Łódź. So cool. Their *Japanese is better*, if you know what I mean.
 
 ## Weekends with my wife
 
