--- a/en/_posts/2025-03-12-zip.md
+++ b/en/_posts/2025-03-12-zip.md
@@ -83,9 +83,41 @@ There is also a hidden pocket on the top of the backpack and they even give you 
 
 ## Perfect under-the-seat free backpack for airplanes?
 
-So it would seem. In two weeks I'll be flying away for a weekend and I'll take it through its paces. I will be hiking a lot so I also appreciate very sturdy and comfortable straps on this backpack as well as a shoulder strap for a more relaxed carry.
+Yes it is. Just tested it on a 4-day trip over a longer weekend and the backpack was ideal for it, it was completely loaded:
 
-Unless the airlines change their rules yet again, I think this backpack will be my go-to choice whenever I have to fly on short distances and will not need too many things.
+![{{ page.title }} loaded](/img/zip-loaded.jpg)
+
+In the main compartment I packed:
+
+- 2 Packing cubes of clothes
+- 1 XXS Mesh Pouch with toiletries
+- 1 XS Pouch with food/snacks
+- Ray Ban Meta glasses
+
+In the side pockets I packed:
+
+- [Anker Charger 523](/anker/#anker-523-47w---lightest-cheapest-and-best-all-around-charger)
+- USB-C Apple Watch Charging cable
+- USB-C to 3 cable (USB-C, Lightning and micro-USB)
+- USB-C to HDMI cable (to connect to screens)
+- USB-A to USB-C and USB-C to USB-A adapters (just in case)
+- USB pen drive
+
+In the "key" pocket that I mentioned above, I also fit an Anker Power Bank 10K.
+
+A backpack packed like this, fit no problem the airport's "measuring cage":
+
+![{{ page.title }} size](/img/zip-size.jpg)
+
+What I also appreciated about this backpack during this trip were the following features:
+
+- When packed, it stands straight. Doesn't fall over.
+- It has vey comfortable straps. I did 20km a day and it was no big deal carrying it around. Of course the shoulder strap really helped as well.
+- The fact it opens completely and the zippers that can let me open it from the side and take something out from the bottom of the backpack. Genius.
+
+![{{ page.title }} side](/img/zip-side.jpg)
+
+Unless the airlines change their rules yet again, I think this backpack will be my go-to choice whenever I have to fly on short distances for a few days and will not need too many things.
 
 ## P.S. Video walkthrough of this backpack by Peak Design
 
