update new version

--- a/en/_posts/2023-11-28-action.md
+++ b/en/_posts/2023-11-28-action.md
@@ -31,7 +31,7 @@ First it checks if the device is an Apple Watch and when it is, it launches a me
 
 ### Step 2. An iPhone in landscape - open Camera!
 
-If it's not a watch, it checks if it's an iPhone and if its orientation is horizontal (landscape) - and for that it uses an action from the [Actions app][da]. It launches the camera 📸 right away. No menus, no nothing, quick camera capture. This saves me so much time and it's so intuitive!
+If it's not a watch, it checks if it's an iPhone and if its orientation is horizontal (landscape) - and for that it uses an action from the [Actions app][da] (**Update in March 2025:** it's no longer needed. Now there's a native *Get Orientation* action). It launches the camera 📸 right away. No menus, no nothing, quick camera capture. This saves me so much time and it's so intuitive!
 
 ![{{ page.title }} photo](/img/action-photo.jpg)
 
@@ -88,7 +88,8 @@ And if you want to see someone geeking out about their Action Button, watch Chri
 {% include video.html id="CMPzU6ZexpA" %}
 
 [na]: /nozbe-add/
-[a]: https://www.icloud.com/shortcuts/01c0c65978824c229a607d564a937b39
+[a]: https://www.icloud.com/shortcuts/6c66883d182a47dbb75fec0015d5cb93
+[a1]: https://www.icloud.com/shortcuts/01c0c65978824c229a607d564a937b39
 [cv]: https://youtube.com/watch?v=CMPzU6ZexpA
 [cs]: https://www.icloud.com/shortcuts/a8fe20dbfd09475aa4afd0fdacc7b3c1
 [df]: https://daringfireball.net/linked/2023/09/22/current-action-button-shortcut
