--- a/en/_posts/2025-04-01-noofficefm-72.md
+++ b/en/_posts/2025-04-01-noofficefm-72.md
@@ -18,7 +18,7 @@ This time on the podcast we’re discussing one of our [CORE values](/nozbe-valu
 <source src="https://media.transistor.fm/4caff08d/27f61b3e.mp3" type="audio/mpeg">
 </audio>
 
-
+{% include videos.html id="ZphjnRqIZGg" name="Why less is more when it comes to productivity?" %}
 
 [Full episode show notes at NOOFFICE.FM/72](https://nooffice.fm/72)
 
