--- a/pl/_posts/2025-04-01-niemabiura-72.md
+++ b/pl/_posts/2025-04-01-niemabiura-72.md
@@ -18,7 +18,7 @@ Zaprosiłem mojego przyjaciela i najbardziej znanego w Polsce **soloprzedsiębio
 <source src="https://media.transistor.fm/331b73a4/d16fa86d.mp3" type="audio/mpeg">
 </audio>
 
-
+{% include videos.html id="gVWH1mEjGME" name="Jak podejmować najlepsze decyzje i skalować biznes?" %}
 
 [Notatki do odcinka na NIEMABIURA.PL/72](https://niemabiura.pl/72)
 
