--- a/en/_posts/2025-03-31-2024.md
+++ b/en/_posts/2025-03-31-2024.md
@@ -21,9 +21,9 @@ The whole year was a roller-coaster for [Nozbe](/nozbe). Despite pretty stable g
 
 The steady growth was there over the first four months of the year and all the parameters were slowly growing, but the fixed costs were unforgiving. Almost every other month my company had to borrow at least some money to meet payroll. This meant we were constantly in debt. After so many profitable years of running my company, it felt like a brutal cold shower. 🥶
 
-Why this all happened? Many contributing factors collided. The **Nozbe Classic** user base kept shrinking. While the new Nozbe kept growing, it wasn't fast enough. There's much more competition on the market and the competitors are well-funded so they have lots of marking dollars to burn. It's just really really hard to keep attracting new customers. It's virtually impossible to go viral or even get recommendations.
+Why this all happened? Many contributing factors collided. The **Nozbe Classic** user base kept shrinking. While the new Nozbe kept growing but it wasn't fast enough. There's much more competition on the market and the competitors are well-funded so they have lots of marketing dollars to burn. It's just really hard to keep attracting new customers. It's virtually impossible to go viral or even get new recommendations.
 
-Yet, whenever I talked to [my customers](https://nozbe.com/users/?c=michaelteam), they'd tell me how much they loved our app and how it made them more productive. However, it's not enough to have a great product these days. And you just have too keep your costs to minimum. You have to be lean as hell to survive. So I had to shrink the team… But:
+Yet, whenever I talked to [Nozbe customers](https://nozbe.com/users/?c=michaelteam), they'd tell me how much they loved our app and how it made them more productive. However, it's not enough to have a great product these days. And you just have to keep your costs to minimum. You have to be lean as hell to survive. So I had to shrink the team… But:
 
 > How do you let people go when you really like and value them and have been working with them for the last many years? And **who** do you let go?
 
@@ -35,13 +35,7 @@ I went on a lunch with one of my closest mentors, Adam, and he helped me see wha
 
 I had to make a deep cut and let go of 3 people at once, in order to cut fixed costs related to their salaries in the future. I also had to communicate to the rest of the team that there will be *no more cuts* and the rest of the team is staying.
 
-Now, who do you let go? Well, it wasn't so much about *who*, because all of the people were great professionals, but it was more about *which position* in the company we reduce. It was about: *without which roles can we keep going*? In the end I decided to let go of:
-
-**[Rafal, VP of Product](https://www.linkedin.com/in/rafal-sobolewski/)** - this was the hardest. Over more than a decade we've been working together and we became close friends. And he is an amazing product manager. However, I realized that for us to keep going we could distribute his responsibilities among our QA engineer, lead designer and me. I also believed that after a decade at Nozbe, Rafal could benefit from a change and would grow more at a slightly bigger company. If you're looking for a great product manager, look no further and contact Rafal. His enthusiasm, professionalism, work ethic and eagerness to learn are all contagious. Just check one of [past episodes of NoOffice podcast to get a feel of how he rolls](/noofficefm-41/). I miss him a lot.
-
-**[Dominika, customer support](https://www.linkedin.com/in/dominika-musiol/)** - we had to shrink our customer support team and it was very hard, too. Dominika is amazing, you could have met her [on one of my webinars](/webinars), like [this one](/differently/). We were confident she's gonna find a great job quickly and she did.
-
-**[Ewelina, marketing](https://www.linkedin.com/in/ewelina-przywara/)** - again, we decided to reduce our marketing team and she was the most junior member on our team. She's a great person and whatever you throw at her, she'll do it with a smile.
+Now, who do you let go? Well, it wasn't so much about *who*, because all of the people were great professionals, but it was more about *which position* in the company we reduce. It was about: *without which roles can we keep going*? In the end I decided to reduce three positions on the team: role of production manager, one customer support rep and one marketing person.
 
 That's it. I didn't want to let go of any of our programmers as I didn't want the quality of our software to suffer. After all, [Nozbe][n] is our customers' trusted [productivity](/productivity) system!
 
