--- a/en/_posts/2025-03-31-2024.md
+++ b/en/_posts/2025-03-31-2024.md
@@ -35,7 +35,7 @@ I went on a lunch with one of my closest mentors, Adam, and he helped me see wha
 
 I had to make a deep cut and let go of 3 people at once, in order to cut fixed costs related to their salaries in the future. I also had to communicate to the rest of the team that there will be *no more cuts* and the rest of the team is staying.
 
-Now, who do you let go? Well, it wasn't so much about *who*, because all of the people were great professionals, but it was more about *which position* in the company we reduce. It was about: *without which roles can we keep going*? In the end I decided to reduce three positions on the team: role of production manager, one customer support rep and one marketing person.
+Now, who do you let go? Well, it wasn't so much about *who*, because all of the people were great professionals, but it was more about *which position* in the company we reduce. It was about: *without which roles can we keep going*? In the end I decided to reduce three positions on the team. We removed the role of a product manager and reduced by one person both customer support and marketing teams.
 
 That's it. I didn't want to let go of any of our programmers as I didn't want the quality of our software to suffer. After all, [Nozbe][n] is our customers' trusted [productivity](/productivity) system!
 
