Zip and Now updates

--- a/en/_posts/2025-03-12-zip.md
+++ b/en/_posts/2025-03-12-zip.md
@@ -119,6 +119,26 @@ What I also appreciated about this backpack during this trip were the following 
 
 Unless the airlines change their rules yet again, I think this backpack will be my go-to choice whenever I have to fly on short distances for a few days and will not need too many things.
 
+## How about a brighter color? I got a "Bone" color as well!
+
+Two months after getting this backpack I happened to be on the West Coast of the USA and I decided to take this opportunity and visit the Peak Design's official retail store in LA:
+
+![{{ page.title }} store](/img/zip-store.jpg)
+
+While there, I couldn't help myself and I got the second backpack, just this time in the beige "bone" color and it's so cute! This color wasn't available online when I was getting the backpack so I could only get it in the store.
+
+![{{ page.title }} Death Valley](/img/zip-dv.jpg)
+
+I took the new backpack on the trail and you must admit it looks great on [Death Valley](https://en.wikipedia.org/wiki/Death_Valley) tracks, right? Blends in perfectly.
+
+## Dividers make a difference, even when you don't have photo gear!
+
+Apparently even if you're not a photographer, the dividers that come with the backpack are very useful, when traveling:
+
+![{{ page.title }} Dividers](/img/zip-dividers.jpg)
+
+Thanks to the side-access mentioned earlier, I learned to appreciate the fact that you can easily divide space in the backpack and access different parts of it easily. My favorite setup was installing one divider on the bottom of the backpack and a power bank right below it, and a second divider much higher. This way I could keep creams and food separate from other things.
+
 ## P.S. Video walkthrough of this backpack by Peak Design
 
 This is not a sponsored post, although I will get a ([small commission if you order through Amazon](https://amzn.to/41EWMqC)). I'm just a big fan of Peak Design and their video comparing the ZIP 15L and 20L actually convinced me to give this backpack a try:
