--- a/en/_posts/2025-05-13-journal4.md
+++ b/en/_posts/2025-05-13-journal4.md
@@ -17,9 +17,9 @@ It's been almost a decade since I started journaling regularly and I've been twe
 
 ## Get Journal 4 and start journaling today on your iPhone/iPad or Mac
 
-This Shortcut is completely free and you can download it here:
+This iOS/Mac Shortcut is completely free and you can download the latest version here:
 
-### [Journal 4.38][j]
+### [Journal Shortcut][j]
 
 Once downloaded, it will ask you few setup questions - choose your language (between English, Spanish and Polish) and choose the day you want to start with (today?) and it'll show you a menu with options and then just choose the first one of "Evening journal" and you're off to the races.
 
@@ -49,11 +49,9 @@ I've studied many different journals. Over the years I realized (as a [productiv
 
 That's why this Shortcut is simple, takes few minutes to do (unless I feel like writing more) and is available on all the platforms I use daily: [iPhone](/iphone), [iPad](/ipadonly) and [Mac](/computers).
 
-## How Journal 4 works step by step?
+## Set up your Journal Shortcut
 
-Now that you are convinced of the values of daily Journaling I challenge you to [get my Shortcut][j] and try it out for the next 7 days and see how you like it:
-
-### Setup
+Now that you are convinced of the values of daily Journaling I challenge you to [get my Shortcut][j] and try it out for the next 7 days and see how you like it.
 
 When you launch the Shortcut for the first time, you'll be greeted with a screen that tells you it wants to [get Journal configuration](/txt/journal4.json) and based on it it will ask you to choose a language (I've prepared English, Spanish and Polish versions) and ask you to choose the date you're starting with (default is today, duh!).
 
@@ -62,7 +60,7 @@ The Shortcut will create on your iCloud Drive a folder in `Shortcuts` called `Jo
 - **Journal.json** - your Journal configuration
 - **2025.md** - your actual journal in [Markdown format](/markdown) (if you're reading it in 2026, the file name will obviously change)
 
-### Menu of Journal
+## Menu of Journal
 
 After the Setup procedure you'll be greeted with a menu:
 
@@ -70,7 +68,7 @@ After the Setup procedure you'll be greeted with a menu:
 
 *Note: If you're launching the Shortcut straight after Setup, you won't see the "Morning Gratitude" option, as you'll be prompted to straight away add your first "Evening Journal" entry.*
 
-### Morning Gratitude (optional)
+### 1. Morning Gratitude (optional)
 
 Once you've added your first Evening Journal entry, you'll see this option to practice your gratitude. As [I've written in the past about the benefits of gratitude](/gratitude/#why-practicing-gratitude-is-so-important), but to sum up:
 
@@ -90,7 +88,7 @@ After that it also asks me the *focusing question* from **The One Thing** book (
 
 All answers are optional. If I don't feel like answering any of these questions, I just hit "OK" and skip it. No stress. No need to answer everything every day. Let's take it easy. It's important to be consistent, not thorough.
 
-### Evening Journal - the main journal!
+### 2. Evening Journal - the main journal!
 
 I don't do gratitude morning every day. I try to, but I don't stress about it. But in order for my Journal to work, I do the **Evening Journal** entry. This one is obligatory. It also asks me **three questions**:
 
@@ -107,11 +105,11 @@ Then it saves the Journal entry to the Journal file and prepares me for the next
 
 Then it saves the Journal entry for tomorrow and sets the *current day* for the Shortcut for tomorrow.
 
-### Add something to Journal - during the day…
+### 3. Add something to Journal - during the day…
 
 Third menu option is for me to record a thought or just *get something out of my system* to the Journal. It's an optional menu that helps me write a note at any point during the day.
 
-### Photos of the day - optional photo memory
+### 4. Photos of the day - optional photo memory
 
 What I haven't mentioned is that the "Evening Journal" also first creates a "photo memory" for me. It takes random 12 photos from today and puts them together so that I can see what happened today. On some days I have barely any photos, but on the others I have quite a few.
 
@@ -121,7 +119,7 @@ When doing the "Evening Journal" it creates the photo memory and saves it to the
 
 This menu lets me re-generate photo memory for a particular day and overwrite the old one in case I don't like it.
 
-### Daily planning
+### 5. Daily planning
 
 I've written about my [daily planning practice before](/journal22/) but in the past I used to create separate text files for each day and manually edit them in a text editor. This was tedious and very often I failed to do it. So I simplified and reduced the barrier of entry and incorporated planning into my Journal Shortcut. Again, this is completely optional. You don't have to do this just because I like doing that.
 
@@ -141,23 +139,27 @@ Additionally it adds them to a CSV (Comma-separated values) file called `2025-pl
 
 Again, each planning session is for just one day and it resets when I do the "Evening Journal" action. Planning is totally optional but it's how I roll and it helps me stay focused and see where my time goes.
 
-### Set / review goals
+### 6. Set / review goals
 
-Again, an optional thing. When you want to (and I do!), you can re-connect with your goals each time you're writing your Journal. To do that, just set your goals according to my template or whatever you feel like. Once your goals are saved, each time you either do the Morning or Evening journaling, you'll be reminded of the goals first, before you write anything down. Many people swear by it, that repeating, re-reading and re-connecting with your goals regularly helps you stay focused.
+Again, an optional thing. When you want to (and I do!), you can re-connect with your goals each time you're writing your Journal. To do that, just set your goals according to my template or whatever you feel like. Once your goals are saved, each time you either do the Morning or Evening journaling, you'll be reminded of the goals first, before you write anything down.
 
-### Open Journal file
+![{{ page.title }} goals](/img/journal4-goals.jpg)
+
+Many people swear by it, that repeating, re-reading and re-connecting with your goals regularly helps you stay focused.
+
+### 7. Open Journal file
 
 This menu option opens your Journal file in your default text editor. I recommend free [Runestone](https://runestone.app) or paid [Textastic](https://www.textasticapp.com) for editing [Markdown text files](/markdown). I use both of these apps.
 
-### Change date
+### 8. Change date
 
 Every time I launch the "Evening Journal" menu it not only writes the journal entry for tonight, but also prepares next day and makes it the *default day* for the Shortcut. If I want to skip a day for some reason, I can do it here and just change the day, decide on the calendar items and this new date will be the new *default date*.
 
 As you can see, I'm not stressing about anything here. If I want to skip a day, I can. If I don't want to do planning, I don't have to. If I don't want to answer a question, I just skip it, too. Low friction.
 
-### Last menu option - version history and updates!
+### 9. Version history and updates!
 
-The last menu option is the version of the Shortcut. I've made screenshots with the version `4.36` and I'll be improving the Shortcut as I go. When you click on this option, the Shortcut will check online on my blog if there is a new version and prompt you to visit this post and [download the latest version][j].
+The last menu option is the version of the Shortcut. I've made screenshots with the version `4.36`, but the one I'm publishing today is `4.38`. I'll be improving the Shortcut as I go. When you click on this option, the Shortcut will check online on my blog if there is a new version and prompt you to visit this post and [download the latest version][j].
 
 ## Journal Shortcut is free and you can modify it, too!
 
@@ -177,7 +179,7 @@ The main translation file [in English is here](https://michael.team/txt/journal4
 
 ### Version history
 
-I've been iterating on this Shortcut for weeks. I'm releasing the version 3.8 to the world. If you're curious how I got there, here are the most important milestones as I was re-writing it from scratch from [version 3](/journal3):
+I've been iterating on this Shortcut for weeks now and I'll be improving it. If you're curious how I got there, here are the most important milestones as I was re-writing it from scratch from [Journal 3](/journal3):
 
 - [4.38 - public release version][j38]
 - 4.36 - tested pre-release version
@@ -194,13 +196,14 @@ I've been iterating on this Shortcut for weeks. I'm releasing the version 3.8 to
 - 4.15 - photo as function + menu option to regenerate 
 - 4.13 - evening works + adding  + reset
 
-As I keep improving the Shortcut I might post new versions here.
+As I keep improving the Shortcut I will try to post new versions here.
 
 ## Happy Journaling!
 
-I hope you'll find my brand [new Journal 4 Shortcut][j] useful and again, I challenge you to start journaling and let me know on social media how it's going for you!
+I hope you'll find my [new Journal 4 Shortcut][j] useful and I challenge you to start journaling and let me know [on social media](/contact) how it's going for you!
 
 [j]: https://www.icloud.com/shortcuts/23704c3c59bd48789222d219193624ce
+
 [j38]: https://www.icloud.com/shortcuts/23704c3c59bd48789222d219193624ce
 
 [n]: https://michael.gratis/nozbe
