--- a/en/_posts/2025-05-05-now250505.md
+++ b/en/_posts/2025-05-05-now250505.md
@@ -5,7 +5,7 @@ img: "bryce.jpg"
 
 # On May 5 `25 I am…
 
-……back from a trip to the west coast USA, which went really well.
+…back from a trip to the west coast USA, which went really well.
 
 <!--More-->
 
