--- a/en/_posts/2025-05-14-usaface.md
+++ b/en/_posts/2025-05-14-usaface.md
@@ -1,17 +1,19 @@
 ---
-tags: [applewatch]
-
+tags: [applewatch,travel]
+cover: "usaface.jpg"
 ---
 
-# Apple Watch face for traveling in the USA
+# Apple Watch face for my USA trip
 
-Recently I was traveling in the USA and to make sure I know what time is in my time zone, back in Europe and in the state I'm going to visit next (Utah…), I created a new watch face combining the [World Clock](/worldclock/) and [Summer Face](/summerface/) which resulted in my "USA Watch face":
+Recently I was traveling in the USA and to make sure I knew what time there was in my time zone back in Europe and in the states I was visiting California, Arizona and… Utah. I created a new watch face combining the [World Clock](/worldclock/) and [Summer Face](/summerface/) which resulted in my "USA Watch face":
 
-![{{ page.title }} 2](/img/usaface-2.jpg)
+<!--More-->
+
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Time zones are complicated…
 
-I normally live in Europe with "Central European Time" which is 9 hours before the PST or "Pacific Standard Time". The problem is that I was also traveling through Utah as I was visiting the **Bryce Canyon** which is in MST or "Mountain Standard Time". Luckily on the [Apple Watch Ultra 2](/ultra/) we have the "Modular Ultra" watch face which you can customize like this:
+I normally live in Europe with "Central European Time" which is 9 hours before the PST or "Pacific Standard Time". The problem is that I was also traveling through Utah as I was visiting the **Bryce Canyon** which is in MST or "Mountain Standard Time". Luckily on the [Apple Watch Ultra 2](/ultra/) we have the **"Modular Ultra"** watch face which you can customize like this:
 
 ## Top row of my "USA" watch face
 
@@ -29,8 +31,11 @@ Later I have the current time in the place I'm at. Then I have the "world clock"
 - **Time in Los Angeles** (I'm flying back from LA)
 - **Sunset/Sunrise** (to know how much light we still have)
 
-The last two complications were particularly important as I was sometimes on the border of Arizona and Utah and wanted to really know what time it was. Also as I was hiking in Bryce Canyon (pictured above) I wanted to make sure I can finish my hike before the sunset.
+The last two complications were particularly important as I was sometimes on the border of Arizona and Utah and wanted to really know what time it was. Also as I was hiking in Bryce Canyon (pictured above) I wanted to make sure I could finish my hike before the sunset.
 
+## Custom Watch faces, Apple? Pretty please!
+
+As WWDC (Apple's Developers Conference) is approaching I'm still hoping that finally we get **custom watch faces** for the Apple Watch… but knowing how Apple wants to control it, I'm not holding my breath… and just keep customizing the only good watch face: Modular Ultra.
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
