--- a/en/_posts/2024-11-11-trump.md
+++ b/en/_posts/2024-11-11-trump.md
@@ -26,7 +26,7 @@ The president of the USA appoints people in charge of everything, and he will do
 
 ## My plan for next 4 years - ignore America completely…
 
-That's my plan. I will ignore news from the USA. I will ignore the guy completely. And I will hope there will be a democratic election after 4 years in the USA again. Next year I was planning a family trip to California. It's cancelled now. I don't feel like visiting the USA anymore.
+That's my plan. I will ignore news from the USA. I will ignore the guy completely. And I will hope there will be a democratic election after 4 years in the USA again. Next year I was planning a family trip to California… but I don't feel like visiting the USA anymore.
 
 Today is the Independence Day for Poland. Last year we had our own kind of Independence Day on October 15, 2023 when after grueling 8 years of Kakistocracy by the PIS government we managed to escape their anti-EU and pro-dictatorship tendencies and voted for the only decent Donald I know, [Donald Tusk](https://en.wikipedia.org/wiki/Donald_Tusk).
 
