--- a/en/_posts/2025-03-12-zip.md
+++ b/en/_posts/2025-03-12-zip.md
@@ -1,5 +1,5 @@
 ---
-tags: [gadgets,travel]
+tags: [gadgets,travel,featured]
 cover: "zip.jpg"
 social: "zip.jpg"
 m: https://social.nozbe.com/@michael/114156828480649759
