--- a/en/_posts/2025-03-19-studio.md
+++ b/en/_posts/2025-03-19-studio.md
@@ -1,5 +1,5 @@
 ---
-tags: [office,computers]
+tags: [office,computers,featured]
 cover: "studio.jpg"
 social: "studio.jpg"
 m: https://social.nozbe.com/@michael/114195655616135136
