--- a/pl/_posts/2025-05-16-nadgryzieni-531.md
+++ b/pl/_posts/2025-05-16-nadgryzieni-531.md
@@ -15,7 +15,7 @@ Rozmawiamy o potencjalnym re-designie iOS19, czyli „zaokrąglonych ikonkach”
 ## Posłuchaj podcast w wersji audio:
 
 <audio controls>
-<source src="" type="audio/mpeg">
+<source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-531.mp3" type="audio/mpeg">
 </audio>
 
 
