--- a/en/_posts/2021-11-18-office22.md
+++ b/en/_posts/2021-11-18-office22.md
@@ -11,6 +11,9 @@ I’ve spent lots of time [setting up my home office for 2021](/office21/) and I
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
+* TOC
+{:toc}
+
 ## Let’s start with the chill-out zone and “backstage”
 
 I kept this part of my home office with the document shredder, and other shelves, the chill-out sofa and a movable iPad desk. On the wall I’ve put my “tech museum” with the still-working original iPad on the wall, as well as the [iPhone SE](/iphonese/), the [iPad 3](/ipad3/), and many other gadgets.
