--- a/en/_posts/2025-06-05-nfc.md
+++ b/en/_posts/2025-06-05-nfc.md
@@ -3,7 +3,7 @@ tags: [shortcuts,office,featured]
 cover: "nfc.jpg"
 ---
 
-# Automating my Home Office with NFC tags and Homebridge
+# Automating Home Office with NFC tags and Homebridge
 
 I'm really proud of my new [2025 Home Office](/office25) and the way it converts to a [recording studio](/studio). However, as I was using it I saw some things that needed improving. As a [Shortcuts](/shortcuts) user I like to automate more stuff to make sure I can switch on or off things in the easiest way possible. For that, I needed to use **NFC tags** and connect some additional lights to Apple Home using the app called **Homebridge**. Here goes:
 
@@ -20,7 +20,7 @@ I bought a packet of [NFC tags][nfc] which retail for a little over $10. It turn
 
 ![{{ page.title }} tags](/img/nfc-tags.jpg)
 
-### Sony camera and smart switch on/off
+## Sony camera and smart switch on/off
 
 Let's start small. As described in my previous post [I have a Sony camera that is controlled using a smart switch](https://michael.team/office25/#prompter---a-teleprompter-upgrade-i-didnt-know-i-needed). I wanted to have an NFC tag next to my desk so when I wave my iPhone next to it, it toggles the camera. It turns it on or off. Here are the steps I took:
 
@@ -34,7 +34,7 @@ Let's start small. As described in my previous post [I have a Sony camera that i
 
 **Bonus**: OK, I've added an additional step to make sure I visually can *know* that the Sony camera is on, and I've set one of the bulbs to light up (the one behind the [R2D2 Lego model](/r2d2/) that lights up the [Nozbe LEGO logo](/nozbe-lego/) from [Augusto](/augusto)). To do that, I had to set up *Automation*, but this time in the *Home app* so that if the "Sony" turn on, the bulb turns on, too. And if it turns off, it turns off this particular bulb.
 
-## Homebridge to help me to add Elgato Key Lights to Home
+## Homebridge adds Elgato Key Lights to Home
 
 I've been using [Elgato Key Lights since 2021](/streaming/#virtual-meetings-rule-2---get-a-better-web-cam) in my home [office](/office) but I've never gotten around to adding them to my *Home app*. I always had to use the clunky *Elgato Control Center* on my Mac to turn them on. And I had to do it manually each time. Yuck.
 
@@ -56,7 +56,7 @@ Now to set it all up in *Home* I had to scan 2 QR codes - first one for the Home
 
 ![{{ page.title }} lights](/img/nfc-lights.jpg)
 
-## Finish off with an automated podcasting scene
+## Beautiful automated podcasting scene
 
 Now that I've got the NFC tags and the Key Lights in my Home app, I can proceed to automate the whole process. When I enter my office, I touch with my iPhone the NFC tag with headphones written on it (see first photo of this blog post) and it triggers the "Podcasting" scene, meaning all my lights turn on and my Sony camera turns on, too. When I leave the office I can touch with iPhone this NFC tag again and everything turns itself off. Glorious.
 
